i18n/ja/docusaurus-plugin-content-docs/version-0.5.x/configuration.md
---
sidebar_position: 5
---

# Gitti 設定

## 言語の切り替え

Gitti は国際化(i18n)をサポートしており、EN(英語、デフォルト)、JA(日本語)、ZH-HANS(簡体字中国語)、ZH-HANT(繁体字中国語)の言語に対応しています。  
Gitti の言語を設定するには、以下のコマンドを実行してください。

```bash
gitti --language JA
```

`gitti`コマンドの後に`--language`フラグと大文字の言語コードを続けます。

英語: `EN`  
日本語: `JA`  
簡体字中国語: `ZH-HANS`  
繁体字中国語: `ZH-HANT`

## Git Init のデフォルトブランチ名を設定

リポジトリが git 初期化される際のブランチのデフォルト名を設定できます。設定しない場合は`master`がデフォルトで使用されます。  
Gitti によって git init が実行される際に使用されるデフォルトブランチ名を設定するには、以下のコマンドを実行してください。

```bash
gitti --init-dbranch <ブランチ名>
```

`<ブランチ名>`を希望の名前に置き換えてください。

## 自動更新の有効化または無効化

デフォルトでは、Gitti は自動的に更新をチェックするように設定されており、新しいバージョンがある場合にユーザーに通知します。  
現在のバージョンを維持したい場合は、更新しないことを選択できます。自動更新を完全に無効にしたい場合は、以下のコマンドを実行してください。

```bash
gitti --auto-update false
```

自動更新を有効にする場合は、以下を実行してください。

```bash
gitti --auto-updater true
```

## 優先エディタの設定

ファイルの編集（例：ファイル上で`e`を押したとき）に使用するエディタを設定できます。デフォルトのエディタは `vim` です。

優先エディタを設定するには、以下を実行します：

```bash
gitti --editor
```

## コミットログ制限の設定

大規模なリポジトリでのパフォーマンスを向上させるため、Gitti はデフォルトで取得するコミットログの数を制限しています。この制限は `--max-commit-log-count` フラグ（整数）で設定できます。

```bash
gitti --max-commit-log-count 500
```

## コミットグラフの設定

非常に大きなリポジトリの場合、Gitti はコミットグラフを使用してログの取得を高速化します。コミットグラフの書き込みを有効または無効にすることができます。

```bash
gitti --allow-commit-graph-write true
```

## ログパネルの設定

Gitti にはログパネル（`/` でアクセス可能）が含まれています。メモリに保持するログの最大数と、UI に表示するログの数を設定できます。

**メモリに保持する最大ログ数を設定:**

```bash
gitti --max-log-count 1000
```

**パネルに表示するログ数を設定:**

```bash
gitti --show-x-log 50
```

## 署名 UI の一時停止のオーバーライド

デフォルトでは、Gitti は（コミット、タグ、リバートなどの）Git 操作が署名のための GPG または SSH パスフレーズを必要とする可能性がある場合、UI を一時停止してターミナルに移行します。キーに手動入力が必要なく、これらの操作中に Gitti が UI を一時停止するのを防ぎたい場合は、この動作をオーバーライドできます。

```bash
gitti --override-signing-ui-suspend true
```

UI の一時停止を再度有効にするには（デフォルト動作）：

```bash
gitti --override-signing-ui-suspend false
```
